muda config angular.json

--- a/angular.json
+++ b/angular.json
@@ -53,6 +53,7 @@
           },
           "configurations": {
             "production": {
+              "baseHref": "/pt/",
               "budgets": [
                 {
                   "type": "initial",
@@ -78,7 +79,6 @@
               "i18nMissingTranslation": "error"
             },
             "development": {
-              "localize": ["pt"],
               "buildOptimizer": false,
               "optimization": false,
               "vendorChunk": true,
