--- a/angular.json
+++ b/angular.json
@@ -14,7 +14,7 @@
       "sourceRoot": "src",
       "prefix": "app",
       "i18n": {
-        "sourceLocale": "pt",
+        "sourceLocale": {"code": "pt", "baseHref": ""},
         "locales": {
           "en": {
             "translation": "src/locale/messages.en.xlf",
@@ -53,7 +53,6 @@
           },
           "configurations": {
             "production": {
-              "baseHref": "/pt/",
               "budgets": [
                 {
                   "type": "initial",
