Site versão SEm locale

--- a/angular.json
+++ b/angular.json
@@ -14,7 +14,7 @@
       "sourceRoot": "src",
       "prefix": "app",
       "i18n": {
-        "sourceLocale": {"code": "pt", "baseHref": ""},
+        "sourceLocale": "pt",
         "locales": {
           "en": {
             "translation": "src/locale/messages.en.xlf",
