--- a/angular.json
+++ b/angular.json
@@ -92,16 +92,16 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "myportfolio:build:production"
+              "buildTarget": "myportfolio:build:production"
             },
             "en": {
-              "browserTarget": "myportfolio:build:en"
+              "buildTarget": "myportfolio:build:en"
             },
             "fr": {
-              "browserTarget": "myportfolio:build:fr"
+              "buildTarget": "myportfolio:build:fr"
             },
             "development": {
-              "browserTarget": "myportfolio:build:development"
+              "buildTarget": "myportfolio:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -109,7 +109,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "myportfolio:build"
+            "buildTarget": "myportfolio:build"
           }
         },
         "test": {
