--- a/src/assets/json/projects.json
+++ b/src/assets/json/projects.json
@@ -96,7 +96,7 @@
 			"en": "Time Clock - Facial Recognition",
 			"es": "Registro de Asistencia - Reconocimiento Facial"
 		},
-		"image": "https://i.ibb.co/mFRSfst0/6300389-3683-3.jpg",
+		"image": "https://i.ibb.co/7JLw0Fbj/capa.png",
 		"label": "Python",
 		"tags": "Django, OpenvCV, Kivy",
 		"description": {
