altera imagem sorvete

--- a/src/assets/json/projects.json
+++ b/src/assets/json/projects.json
@@ -78,7 +78,7 @@
 			"en": "Ice Cream Shop System with Django + jQuery",
 			"es": "Sistema de Heladería con Django + jQuery"
 		},
-		"image": "https://i.ibb.co/ZzFpSFXx/6301171-611d-2.jpg",
+		"image": "https://i.ibb.co/cS2qGCrw/thumbnail-sovert2.png",
 		"label": "Django",
 		"tags": "Python, jQuery",
 		"description": {
